# data-loves-ml-for-people-course

./: .gitignore  README.md  environment.yml  file.txt  pyproject.toml  sample.csv
0_python/: HW1_Змінні_та_основні_типи_даних_в_Python.ipynb  HW3_Умовні_конструкції_(if_elif_else).ipynb  HW5_Цикл_while_List_comprehensions.ipynb  HW6.0_Lambda_functions.ipynb  HW6_Функції.ipynb  HW7_Numpy.ipynb
1_ds_intro/: 3_Normal_distribution_test.ipynb  4_Distribution_types.ipynb  5_Distribution_to_data.ipynb  HW_1_1_Основи_статистики.ipynb  HW_1_2_Credit_EDA.ipynb
notebooks/: 1_Credit_EDA_copy.ipynb
notebooks/0_python/: HW2.0_Tuples_and_sets.ipynb  HW2_Списки_та_словники.ipynb  HW4_Цикл_for.ipynb  HW6.0_Lambda_functions.ipynb  HW8_Pandas.ipynb  HW9_Data_Visualization.ipynb
notebooks/1_ds_intro/: HW_1_1_Основи_статистики.ipynb
notebooks/2_1_linear_regression/: 0_1_Least_squares_loss_metrics.ipynb  0_2_Gradient_descent.ipynb  HW_2_1_Аналіз_ознак_для_побудови_лінійної_регресії.ipynb  HW_2_1_Лінійна_регресія_від_багатьох_змінних.ipynb  HW_2_1_Матриці_і_вектори_(вступ_до_лін_алгебри).ipynb  HW_2_1_Побудова_лінійної_регресії_за_одною_ознакою.ipynb  HW_2_1_Тестування_стат_гіпотез.ipynb  HW_2_1_Функції_і_похідні.ipynb
notebooks/2_2_logistic_regression/: 0_1_f1_precision_recall_rou.ipynb  0_2_polynomial_regression.ipynb  0_3_L1_L2_regularization.ipynb  0_4_bank_customer.ipynb  0_5_class_imbalance.ipynb  0_6_multiclass_multilabel.ipynb  0_7_bank_customer_numeric_binner.ipynb  HW_2_2_Логістична_регресія_з_scikit_learn.ipynb  (+3 more)
tests/: test_descriptive.py
tools/: generate_structure.py
(+215 files in other folders)
