[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mlpeople"
version = "0.1.0"
description = "Machine learning for people course project"
requires-python = ">=3.11,<3.13"

dependencies = [
    # Core
    "numpy>=1.26,<3.0",
    "pandas>=2.1,<3.0",
    "scipy>=1.11,<1.15",
    "statsmodels>=0.14",
    "sympy>=1.14,<2.0",
    "scikit-learn>=1.8,<2.0",

    # IO / formats
    "pyarrow>=14,<17",

    # Utilities / serialization
    "joblib>=1.3,<2.0",

    # Visualization
    "matplotlib>=3.8,<3.10",
    "seaborn>=0.13,<0.14",
    "plotly>=5.18,<6.0",

    # Web / parsing
    "requests>=2.31,<3.0",
    "beautifulsoup4>=4.12,<5.0",
    "pyjwt>=2.8,<3.0",
    "cryptography>=41.0,<44.0", # <-- required for RS256
]

[project.optional-dependencies]
notebooks = [
    "ipython>=8.20,<9.0",
    "jupyterlab>=4.0,<5.0",
    "ipykernel>=6.29,<7.0",
]

dev = [
    "black>=24.0",
    "ruff>=0.4",
    "pytest>=8.0",
    "mypy>=1.8",
    "types-requests>=2.32.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
strict_optional = true
warn_unused_ignores = true